--- a/mcidashboard/mcidashboard-front/src/css/overview.css
+++ b/mcidashboard/mcidashboard-front/src/css/overview.css
@@ -28,6 +28,7 @@
     width: 100%;
     gap: 20px;
     margin-bottom: 20px;
+    align-items: flex-end;
 }
 
 #pers-card {
